--- a/repo-browser/Base.lproj/Main.storyboard
+++ b/repo-browser/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Repo_browser" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="repo_browser" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -32,7 +32,7 @@
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repo owner" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aUR-ad-ow1">
-                                <rect key="frame" x="20" y="209" width="374" height="30"/>
+                                <rect key="frame" x="20" y="209" width="282" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="g87-Hx-hqO"/>
                                 </constraints>
@@ -45,13 +45,25 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ikr-FT-rQf">
+                                <rect key="frame" x="310" y="209" width="78" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="78" id="4NP-fv-0qv"/>
+                                    <constraint firstAttribute="height" constant="30" id="ZiD-Ny-EUZ"/>
+                                </constraints>
+                                <state key="normal" title="Load"/>
+                                <connections>
+                                    <action selector="loadRepo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ebf-Os-9AI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="aUR-ad-ow1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4yT-pH-1sr"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aUR-ad-ow1" secondAttribute="trailing" constant="20" id="5B0-r3-Ixy"/>
                             <constraint firstItem="oNG-Cv-10h" firstAttribute="top" secondItem="eQv-L9-z0k" secondAttribute="bottom" constant="8" id="6oz-5Q-p2y"/>
+                            <constraint firstItem="ikr-FT-rQf" firstAttribute="top" secondItem="aUR-ad-ow1" secondAttribute="top" id="Azg-LF-tAW"/>
+                            <constraint firstItem="ikr-FT-rQf" firstAttribute="leading" secondItem="aUR-ad-ow1" secondAttribute="trailing" constant="8" id="E5H-wj-pA3"/>
                             <constraint firstItem="aUR-ad-ow1" firstAttribute="top" secondItem="oNG-Cv-10h" secondAttribute="bottom" constant="8" id="EJ6-Zk-hrd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ikr-FT-rQf" secondAttribute="trailing" constant="26" id="Pbn-h4-lhZ"/>
                             <constraint firstItem="oNG-Cv-10h" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dQj-eo-yYS"/>
                             <constraint firstItem="eQv-L9-z0k" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rWA-3I-6aE"/>
                             <constraint firstItem="aUR-ad-ow1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="uPl-hj-HvI"/>
